' Generated by UML Generator
' Encoded: jLH1Jy8m6BtlLtpn184Pz4Y2WP2Oc7WmxE31U2ZhvsZiMcWxJKJ-krtRCSgGuC4BAQ_llM_lRUrK6w9CLV94lpEn9egKa7EYzSmOnPQLmOTSYenz8OoI5QC8ELCvnoHnBCXMP8smJG3IN7Afnf1PdIXW0bSAwLMzySOuHpg6fPGSYR1RHbLOxwJsP-0iUlrs6HaDuKZkY0MQUStgzHjUZUe6ZHmivKCoMXEOldTcjIpO1Lt0ZsUrKYEzsy74NLF2t5NYMr24iagFWSfgQR49t5oFzb4zqMSDwvW_XCl2BvogVXQl2oa277iUXB3AcK8IwopuX8gLQ535E-SoBp0tH1HDx4z6pQgRcgCeJk6kZRs5BwJz6vaD8JRv2_VIEfzhaqwR7eq6n5q-kc4TNO2F7ljVtaAsgOZohs3Wr-4W-RMs1pRgxGH-QKUPrNIYEZ2QqiRSDwZjxN5wFpJrYy6vu9iAjM5ItCvy-AsznmpBTr0I9df45RhHlBmsbbOSJcgQVj_vgojfl-C3CDJga3qXcQAWzgRy0G
' URL: http://www.plantuml.com/plantuml/uml/jLH1Jy8m6BtlLtpn184Pz4Y2WP2Oc7WmxE31U2ZhvsZiMcWxJKJ-krtRCSgGuC4BAQ_llM_lRUrK6w9CLV94lpEn9egKa7EYzSmOnPQLmOTSYenz8OoI5QC8ELCvnoHnBCXMP8smJG3IN7Afnf1PdIXW0bSAwLMzySOuHpg6fPGSYR1RHbLOxwJsP-0iUlrs6HaDuKZkY0MQUStgzHjUZUe6ZHmivKCoMXEOldTcjIpO1Lt0ZsUrKYEzsy74NLF2t5NYMr24iagFWSfgQR49t5oFzb4zqMSDwvW_XCl2BvogVXQl2oa277iUXB3AcK8IwopuX8gLQ535E-SoBp0tH1HDx4z6pQgRcgCeJk6kZRs5BwJz6vaD8JRv2_VIEfzhaqwR7eq6n5q-kc4TNO2F7ljVtaAsgOZohs3Wr-4W-RMs1pRgxGH-QKUPrNIYEZ2QqiRSDwZjxN5wFpJrYy6vu9iAjM5ItCvy-AsznmpBTr0I9df45RhHlBmsbbOSJcgQVj_vgojfl-C3CDJga3qXcQAWzgRy0G
' Generated on: 2025-11-02T15:26:31.234268200

@startuml
skinparam classAttributeIconSize 0
hide circle

class Shape {
  -color: String = "red"
  -filled: boolean = true
  --
  +Shape()
  +Shape(color: String, filled: boolean)
  +getColor(): String
  +setColor(color: String): void
  +isFilled(): boolean
  +setFilled(filled: boolean): void
  +toString(): String
}

class Circle {
  -radius: double = 1.0
  --
  +Circle()
  +Circle(radius: double, color: String, filled: boolean)
  +getRadius(): double
  +setRadius(radius: double): void
  +getArea(): double
  +getPerimeter(): double
  +toString(): String
}

class Rectangle {
  -width: double = 1.0
  -length: double = 1.0
  --
  +Rectangle()
  +Rectangle(width: double, length: double)
  +Rectangle(width: double, length: double, color: String, filled: boolean)
  +getWidth(): double
  +setWidth(width: double): void
  +getLength(): double
  +setLength(length: double): void
  +getArea(): double
  +getPerimeter(): double
  +toString(): String
}

class Square {
  +Square()
  +Square(side: double)
  +Square(side: double, color: String, filled: boolean)
  +getSide(): double
  +setSide(side: double): void
  +setWidth(size: double): void
  +setLength(side: double): void
  +toString(): String
}

class question2A {
  +{static} main(args: String[]): void
}

Circle --|> Shape
Rectangle --|> Shape
Square --|> Rectangle
@enduml